Stop log in as demo text from wrapping when browser strinks

--- a/app/assets/stylesheets/signup_login/navbar.css
+++ b/app/assets/stylesheets/signup_login/navbar.css
@@ -84,4 +84,5 @@
   font-size: 12px;
   color: #a0b4d5;
   cursor: pointer;
+  white-space: nowrap;
 }
